--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     <main>
         <div class="passo ativo" id="passo-0">
-            <img src="" alt="cenario-passo0.webp">
+            <img src="cenario-passo0.webp" alt="">
             <p>Um dia desses, dentro de um livro da biblioteca da escola, eu descobri uma carta antiga sobre uma cidade perdida, escondida por riquezas e belezas naturais. Nessa carta, a autora deixa algumas pistas para encontrar essa cidade e eu decidi segui-las!</p>
             <button class="btn-proximo" data-proximo="1">Rio de Janeiro</button>
             <button class="btn-proximo" data-proximo="2">São Paulo</button>
@@ -33,7 +33,7 @@
     </div>
 
     <div class="passo" id="passo-4">
-        <img src="cenario-passo4-voltar-casa.webp" alt="imagem voltando para casa, desistindo">
+        <img src="cenario-passo4-voltar-casa.webp" alt="">
         <p>Você decide que a aventura é grande demais e volta para casa, mas sempre se pergunta o que teria encontrado.</p>
     </div>
 
